# kashi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.base.json
.claude/agents/: kashi-reviewer.md  ytm-scout.md
.github/workflows/: ci.yml  docker.yml  python-slow.yml  release-overlay.yml  ytdlp-canary.yml
apps/extension/: manifest.json  package.json  tsconfig.json
apps/extension/src/content/: index.ts
apps/extension/src/main-world/: media-session.ts
apps/extension/src/shared/: messages.ts
apps/extension/src/sw/: connection.ts  index.ts  logic.test.ts  logic.ts
apps/overlay/: electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
apps/overlay/scripts/: fake-extension.mjs
apps/overlay/spikes/fx-layer/: README.md  index.html  main.mjs  package.json  renderer.js
apps/overlay/src/main/: enqueue-gate.test.ts  enqueue-gate.ts  index.ts  kashi-server-logic.test.ts  kashi-server-logic.ts  kashi-server.live.test.ts  kashi-server.test.ts  kashi-server.ts  log.test.ts  log.ts  lookup-orchestrator.test.ts  lookup-orchestrator.ts  lrclib.test.ts  lrclib.ts  replay-store.test.ts  replay-store.ts  settings-logic.test.ts  settings-logic.ts  settings.ts  source-latch-logic.test.ts  source-latch-logic.ts  style-contract.test.ts  tray.ts  ws-server.test.ts  ws-server.ts
apps/overlay/src/preload/: index.ts
apps/overlay/src/renderer/: index.html  server-settings.html  timing-offset.html
apps/overlay/src/renderer/src/: artwork-palette.test.ts  artwork-palette.ts  color-tone.test.ts  color-tone.ts  effects-logic.test.ts  effects-logic.ts  fx-icons.ts  main.ts  position-clock.test.ts  position-clock.ts  server-settings.ts  style.css  timing-offset.css  timing-offset.ts  view-logic.test.ts  view-logic.ts
apps/overlay/src/shared/: effect-level.ts  lyrics.ts  version.ts
apps/server/: Dockerfile  alembic.ini  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: ba5b9cfda7c7_initial_schema.py  c41f7a2d9e02_uploaded_audio.py  d7e94b1c3a55_lrclib_publishes.py
apps/server/benchmarks/: Dockerfile.gpu  README.md  __init__.py  cases.yaml  datasets.py  metrics.py  run.py  softoffset.py
apps/server/benchmarks/results/: 2026-07-11-baseline-full-mix.json  2026-07-11-pc-bs-roformer-mb0.15.json  2026-07-11-pc-bs-roformer-mb0.json  2026-07-11-pc-full-mix.json  2026-07-11-pc-voc-ft-mb0.15.json  2026-07-11-ryzen-cases-bs-roformer-mb0.15.json  2026-07-11-ryzen-cases-kim-melband-mb0.json  2026-07-11-ryzen-subset8-bs-roformer-mb0.15.json  2026-07-11-ryzen-subset8-voc-ft-mb0.15.json  2026-07-11-sanity-fullmix-win.json  2026-07-12-cases5-2.0.2-fixedwet.json  2026-07-12-cases5-2.0.2.json  2026-07-12-pc-bsr-resurrection-mb0.json  2026-07-12-pc-bsr-revive-v2-mb0.json  2026-07-12-pc-kim-bleedless-mb0.json  2026-07-12-pc-kim-melband-mb0.15.json  2026-07-12-pc-kim-melband-mb0.json  2026-07-12-pc-kim-win-j400.json  2026-07-12-sanity-fullmix-win-edges.json  2026-07-12-sanity-production-config.json  2026-07-12-subset8-fullmix-win-edges-j0.json  2026-07-12-subset8-fullmix-win-edges-j400.json  2026-07-12-subset8-fullmix-win-j0.json  2026-07-12-subset8-fullmix-win-j400.json  2026-07-13-p1-subset8-notrim.json  2026-07-13-p1-subset8-trim.json  2026-07-18-p2-none-j0.json  2026-07-18-p2-none-j250.json  2026-07-18-p2-none-j500.json  2026-07-18-p2-soft-median-j0.json  2026-07-18-p2-soft-median-j250.json  2026-07-18-p2-soft-median-j500.json  2026-07-18-p2-soft-pl-j0.json  2026-07-18-p2-soft-pl-j250.json  2026-07-18-p2-soft-pl-j500.json
apps/server/scripts/: compare_lrclib.py  dump_embed_scores.py  expand_lexicon.py
apps/server/src/kashi_server/: __init__.py  auth.py  config.py  queue.py  ratelimit.py  version.py
apps/server/src/kashi_server/api/: app.py  deps.py  middleware.py  schemas.py
apps/server/src/kashi_server/api/routers/: admin_keys.py  admin_ops.py  ingest.py  jobs.py  lyrics.py  publish.py  uploads.py
apps/server/src/kashi_server/db/: engine.py  models.py
apps/server/src/kashi_server/pipeline/: alignment.py  audio_source.py  beats.py  document.py  download.py  energy.py  langid.py  lexicon_lint.py  line_qa.py  lrclib.py  lyricsfile.py  nightcore.py  palette.py  publish.py  semantics.py  structure.py  titles.py  windows.py
apps/server/src/kashi_server/pipeline/data/: fx_lexicon.yaml
apps/server/src/kashi_server/vdl_kit/: errors.py  verify.py  ytdlp_opts.py
apps/server/src/kashi_server/worker/: __main__.py  main.py  process.py  publisher.py  warmup.py
apps/server/tests/: conftest.py  helpers.py  test_alignment_regroup.py  test_alignment_smoke.py  test_api_auth.py  test_api_hardening.py  test_api_ingest.py  test_api_jobs.py  test_api_lyrics.py  test_api_reprocess.py  test_api_uploads.py  test_auth.py  test_beats.py  test_benchmark_datasets.py  test_benchmark_metrics.py  test_benchmark_softoffset.py  test_config_defaults.py  test_document.py  test_download.py  test_energy.py  test_health.py  test_langid.py  test_lexicon_lint.py  test_line_qa.py  test_lrclib.py  test_lyricsfile.py  test_nightcore.py  test_palette.py  test_publish.py  test_queue.py  test_ratelimit.py  test_schema_fixtures.py  test_semantics.py  test_separation.py  test_structure.py  test_vdl_errors.py  test_verify.py  test_warmup.py  test_windows.py  test_worker_process.py
apps/server/tests/fixtures/: README.md
apps/server/tests/fixtures/lyricsfile/: instrumental.yaml  line-only.yaml  mixed-mismatch.yaml  nonmono.yaml  offset.yaml  valid.yaml  version-2.yaml
deploy/compose/: .env.example  docker-compose.yml
docs/: lexicon-expansion-playbook.md
docs/research/: allin1-viability-2026-07.md  bad-girl-sections-2026-07.md  embed-threshold-calibration-2026-07.md  fx-layer-spike-2026-07.md  hizalama-v2-benchmark-2026-07.md  runtime-llm-tagging-memo.md  soft-offset-spike-2026-07.md  telemetry-6.7-sketch.md  video-song-substitution-memo.md  ytm-integration-2026-07.md
scripts/: check-versions.mjs
